# re2dfa

./: CMakeLists.txt  RegexCheckerCore_Windows.lib  api.hpp  main.cpp  re2dfa.in  re2dfa.out
